# wgpu_samples

./: Cargo.toml  README.md
src/: main.rs  main_app.rs
src/apps/: mod.rs
src/apps/cubemap/: cube_texture.rs  mod.rs  shader.wgsl
src/apps/hello_triangle/: mod.rs
src/apps/instanced_cube/: mod.rs  shader.wgsl
src/apps/rotating_cube/: mod.rs  shader.wgsl
src/apps/textured_cube/: mod.rs  shader.wgsl
src/apps/two_cubes/: mod.rs  shader.wgsl
src/custom3d/: mod.rs
src/hello_triangle/: mod.rs  shader.wgsl
src/meshes/: cube.rs
